Updating stylesheet to make all of the pages look pretty

--- a/src/pages/assignments/assignments.html
+++ b/src/pages/assignments/assignments.html
@@ -40,7 +40,7 @@
             <h2 id="top">Assignments</h2>
         </header>
                     
-        <section id="body" class="row">
+        <section id="body-upper" class="row">
             <!-- Left Column -->
             <div class="col-md-3 border-right left-col">
                 <h2>Links!</h2>
