--- a/src/pages/meetup/meetup.html
+++ b/src/pages/meetup/meetup.html
@@ -40,7 +40,7 @@
             <h2 id="top">Meetup Report</h2>
         </header>
                     
-        <section id="body" class="row">
+        <section id="body-upper" class="row">
             <!-- Left Column -->
             <div class="col-md-3 border-right left-col">
                 <h2>Links!</h2>
@@ -57,7 +57,7 @@
             <div class="col-md-8 center-col">
                 <h2>
                     Hello world!<br>
-                    There's nothing here yet for the meetup report. Content will be coming soon so in the meantime, heres a picture of 2 buns booping each other
+                    There's nothing here yet for the meetup report. Content will be coming soon so in the meantime, heres a picture of my 2 buns Cecily and Bobby booping each other
                 <h2>
                 <img class="center-img" alt="Picture of Cecily and Bobby booping each other!" src="../../assets/images/cecilybobbykissy.jpg"/>
             </div>
