--- a/homework1.html
+++ b/homework1.html
@@ -19,8 +19,8 @@
         <link rel="stylesheet" href="homework1.css">
 
         <!-- bootstrap local -->
-        <link rel="stylesheet" href="../../includes/bootstrap-4.1.3-dist/css/bootstrap.min.css">
-        <script src="../../includes/bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="src/includes/bootstrap-4.1.3-dist/css/bootstrap.min.css">
+        <script src="src/includes/bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
 
         <!-- Bootstrap Crossorigin -->
         <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
