Fixing html to ensure they're validated

--- a/homework1.html
+++ b/homework1.html
@@ -38,7 +38,10 @@
         </header>
                     
         <section id="body-upper" class="row">
-            <!-- Left Column -->
+            <!-- 
+                Left Column:
+                Links to pages
+            -->
             <div class="col-md-3 border-right left-col">
                 <h2>Links!</h2>
                 <ul>
@@ -50,7 +53,10 @@
                 </ul>
             </div>
 
-            <!-- Center Column -->
+            <!-- 
+                Center Column:
+                Content
+            -->
             <div class="col-md-8 center-col">
                 <h2>Welcome to my webpage for CNIT 132! Here's a picture of me and one of my bunnies Cecily!</h2>
                 <img class="center-img" alt="Picture of me and Cecily" src="./src/assets/images/cecilyandme.jpg"/>
@@ -83,9 +89,10 @@
 
         <hr>
 
+        <!-- Good Links -->
         <section id="body-lower" class="row">
             <div class="col-md-8 left-col">
-                <h2>Good Links for any Software Developer!</h2>
+                <h2>Good Links for any Software Engineer!</h2>
                 <ul>
                     <li><a href="https://www.google.com/">Google - Everything is a search away! A perfect resource for any engineer</a></li>
                     <li><a href="https://stackoverflow.com/">Stackoverflow - Questions and Answers board! If you have a question, check here, it might have been answered already!</a></li>
