--- a/src/pages/meetup/meetup.html
+++ b/src/pages/meetup/meetup.html
@@ -36,8 +36,8 @@
     <body>
         <!-- Header -->
         <header class="border-bottom">
-            <h1 id="top">Rachel Vancleave - CNIT 132</h1>
-            <h2 id="top">Meetup Report</h2>
+            <h1>Rachel Vancleave - CNIT 132</h1>
+            <h2>Meetup Report</h2>
         </header>
                     
         <section id="body-upper" class="row">
@@ -58,7 +58,7 @@
                 <h2>
                     Hello world!<br>
                     There's nothing here yet for the meetup report. Content will be coming soon so in the meantime, heres a picture of my 2 buns Cecily and Bobby booping each other
-                <h2>
+                </h2>
                 <img class="center-img" alt="Picture of Cecily and Bobby booping each other!" src="../../assets/images/cecilybobbykissy.jpg"/>
             </div>
         </section>
