</body> readded to each of the html files

--- a/src/pages/assignments/assignments.html
+++ b/src/pages/assignments/assignments.html
@@ -62,5 +62,6 @@
                 <img class="center-img" alt="Picture of Cecily and Bobby booping each other!" src="../../assets/images/cecilybobbykissy.jpg"/>
             </div>
         </section>
+    </body>
 
 </html>
