--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -62,5 +62,6 @@
                 <img class="center-img" alt="Picture of Cecily and Bobby booping each other!" src="../../assets/images/cecilybobbykissy.jpg"/>
             </div>
         </section>
+    </body>
 
 </html>
