--- a/src/pages/assignments/assignments.html
+++ b/src/pages/assignments/assignments.html
@@ -56,10 +56,9 @@
             <!-- Center Column -->
             <div class="col-md-8 center-col">
                 <h2>
-                    Hello world!<br>
-                    There's nothing here yet! Assignments for CNIT 132 will be here soon so in the meantime, heres a picture of 2 buns booping each other
+                    <a class="boldLink" href="./htmlTohtml5/homework2.html">Mini Project 2</a><br>
                 </h2>
-                <img class="center-img" alt="Picture of Cecily and Bobby booping each other!" src="../../assets/images/cecilybobbykissy.jpg"/>
+                <!-- <img class="center-img" alt="Picture of Cecily and Bobby booping each other!" src="../../assets/images/cecilybobbykissy.jpg"/> -->
             </div>
         </section>
     </body>
