Finished mini project 2

--- a/homework1.html
+++ b/homework1.html
@@ -57,8 +57,8 @@
                 Content
             -->
             <div class="col-md-8 center-col">
-                <h2>Welcome to my webpage for CNIT 132! Here's a picture of me and one of my bunnies Cecily!</h2>
-                <img class="center-img" alt="Picture of me and Cecily" src="./src/assets/images/cecilyandme.jpg"/>
+                <h2>Welcome to my webpage for CNIT 132! Here's a picture of me and one of my white bunny Cecily!</h2>
+                <img class="center-img" alt="Picture of me and my white bunny Cecily" src="./src/assets/images/cecilyandme.jpg"/>
 
                 <p id="about-me">
                     My name is Rachel Vancleave, and I have many titles that identify who I am!<br>
