--- a/src/pages/assignments/htmlTohtml5/homework2.html
+++ b/src/pages/assignments/htmlTohtml5/homework2.html
@@ -27,6 +27,8 @@
     <body>
         <h1>This is the first heading</h1>
 
+        <p id="movingBanner">This is a banner! This moves from left to right!</p>
+
         <p>
             <span class="firstCharItalBig">T</span>his is my first paragraph and all the paragraphs in this page will start
             with a bigger font
