added short task assignment

--- a/src/pages/assignments/assignments.html
+++ b/src/pages/assignments/assignments.html
@@ -57,6 +57,7 @@
             <div class="col-md-8 center-col">
                 <h2>
                     <a class="boldLink" href="./htmlTohtml5/homework2.html">Mini Project 2</a><br>
+                    <a class="boldLink" href="./ShortTask/shortTask.html">Short Task - 2 column Layout</a><br>
                 </h2>
                 <!-- <img class="center-img" alt="Picture of Cecily and Bobby booping each other!" src="../../assets/images/cecilybobbykissy.jpg"/> -->
             </div>
