--- a/finalProj.html
+++ b/finalProj.html
@@ -1,7 +1,7 @@
 <!-- 
     Rachel Vancleave
-    CNIT 132 Mini Project 1: Homepage and Assignments Page 
-    Date Created: 2/17/20
+    CNIT 132 Final Project 
+    Date Created: 5/10/20
 -->
 
 <!DOCTYPE html>
@@ -9,47 +9,40 @@
 
     <!-- Head -->
     <head>
-        <title>Homerwork 1</title>
+        <title>Final Project</title>
         <meta charset="utf-8">
-        <meta name="description" content="Homework 1 Page">
+        <meta name="description" content="Final Project">
 
 
         <!-- Importing stuff -->
         <!-- My Stylesheet -->
-        <link rel="stylesheet" href="homework1.css">
-
-        <!-- bootstrap local -->
-        <link rel="stylesheet" href="src/includes/bootstrap-4.1.3-dist/css/bootstrap.min.css">
-        <script src="src/includes/bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
-
-        <!-- Bootstrap Crossorigin -->
-        <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
-        <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> -->
+        <link rel="stylesheet" href="finalProj.css">
     </head>
 
     <!-- Body: Where all the content goes -->
     <body>
-        <!-- Header -->
-        <header class="border-bottom">
-            <h1 id="top">Rachel Vancleave - CNIT 132</h1>
-        </header>
-                    
-        <section id="body-upper" class="row">
+        <section id="body-upper" class="gridLayout">
+            <!-- 
+                Header
+             -->
+            <header class="gridHeader gridEnds border-bottom">
+                <h1 id="top">Rachel Vancleave - CNIT 132</h1>
+            </header>
+
             <!-- 
                 Left Column:
                 Links to pages
             -->
-            <div class="col-md-3 border-right left-col">
+            <div class="gridMenu gridBody border-right left-col">
                 <h2>Links!</h2>
                 <ul>
-                    <li><a href="./finalProj.html">Final Project : New Homepage</a></li>
-                    <br>
                     <li><a href="./homework1.html">Homepage</a></li>
                     <li><a href="./src/pages/assignments/assignments.html">Assignments</a></li>
                     <li><a href="./src/pages/meetup/meetup.html">Meetup Report</a></li>
-                    <li><a href="./src/pages/contact/contact.html">Contect</a></li>
+                    <li><a href="./src/pages/contact/contact.html">Contact</a></li>
+                    <br>
+                    <li><a href="homework1.html">HW 1 (Original Front Page Site)</a></li>
+                    <br>
                     <li><a href="https://hills.ccsf.edu/~rvanclea/cnit133/index.html" target="_blank">CNIT 133 Homework Page</a></li>
                 </ul>
             </div>
@@ -58,14 +51,11 @@
                 Center Column:
                 Content
             -->
-            <div class="col-md-8 center-col">
+            <div class="gridMain gridBody center-col">
                 <h2>Welcome to my webpage for CNIT 132! Here's a picture of me and one of my white bunny Cecily!</h2>
                 <img class="center-img" alt="Picture of me and my white bunny Cecily" src="./src/assets/images/cecilyandme.jpg"/>
 
                 <p id="about-me">
-                    ***** Before we start, this page in specific is the original start page when I built this site for CNIT 132 at the beginning of the semester, using the bootstrap famework to organize the site into the left sidebar, top header and right content style. But for the sake of the final project where i'm retiring this page for the final project page that is linked to the left, and <a href="finalProj.html">here!</a> The final project layout will be identical as possible to this, and i'll try and get it to function the same as before. Thank you! :D *****
-                    <br>
-                    <br>
                     My name is Rachel Vancleave, and I have many titles that identify who I am!<br>
                     I'm a full time Computer Science Student at CCSF, A part time Computer science tutor, and I'm a part time indiependent video game developer for
                     my own studio The Starfold Project. My ultimate goal is to be a software engineer at a video game studio, become extremely proficient in graphics
@@ -89,13 +79,12 @@
                 </p>
                 <br>
             </div>
-        </section>
 
-        <hr>
-
-        <!-- Good Links -->
-        <section id="body-lower" class="row">
-            <div class="col-md-8 left-col">
+            <!-- 
+                Footer: Good Links
+            -->
+            <hr>
+            <div id="body-lower" class="gridFooter gridEnds left-col">
                 <h2>Good Links for any Software Engineer!</h2>
                 <ul>
                     <li><a href="https://www.google.com/">Google - Everything is a search away! A perfect resource for any engineer</a></li>
