--- a/finalProj.html
+++ b/finalProj.html
@@ -13,6 +13,11 @@
         <meta charset="utf-8">
         <meta name="description" content="Final Project">
 
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
+
 
         <!-- Importing stuff -->
         <!-- My Stylesheet -->
@@ -36,7 +41,7 @@
             <div class="gridMenu gridBody border-right left-col">
                 <h2>Links!</h2>
                 <ul>
-                    <li><a href="./homework1.html">Homepage</a></li>
+                    <li><a href="./finalProj.html">Homepage</a></li>
                     <li><a href="./src/pages/assignments/assignments.html">Assignments</a></li>
                     <li><a href="./src/pages/meetup/meetup.html">Meetup Report</a></li>
                     <li><a href="./src/pages/contact/contact.html">Contact</a></li>
@@ -52,7 +57,7 @@
                 Content
             -->
             <div class="gridMain gridBody center-col">
-                <h2>Welcome to my webpage for CNIT 132! Here's a picture of me and one of my white bunny Cecily!</h2>
+                <h2>Welcome to my webpage for CNIT 132! Here's a picture of me and my white bunny Cecily!</h2>
                 <img class="center-img" alt="Picture of me and my white bunny Cecily" src="./src/assets/images/cecilyandme.jpg"/>
 
                 <p id="about-me">
@@ -84,7 +89,7 @@
                 Footer: Good Links
             -->
             <hr>
-            <div id="body-lower" class="gridFooter gridEnds left-col">
+            <footer id="body-lower" class="gridFooter gridEnds left-col">
                 <h2>Good Links for any Software Engineer!</h2>
                 <ul>
                     <li><a href="https://www.google.com/">Google - Everything is a search away! A perfect resource for any engineer</a></li>
@@ -101,7 +106,9 @@
                     </li>
                     <li><a href="https://twitter.com/">Twitter - Basically invaluable for any developer for connecting with anyone in the software industry</a></li>
                 </ul>
-            </div>
+                <br>
+                <p>&copy; Copyright 2020, Rachel Vancleave <a href="mailto:rvanclea@mail.ccsf.edu">rvanclea@mail.ccsf.edu</a><br>Created for CNIT 132</p>
+            </footer>
             
         </section>
     </body>
