finished all parts, need to do meetup report next

--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -78,6 +78,23 @@
             -->
             <hr>
             <footer id="body-lower" class="gridFooter gridEnds left-col">
+                <h2>Good Links for any Software Engineer!</h2>
+                <ul>
+                    <li><a href="https://www.google.com/">Google - Everything is a search away! A perfect resource for any engineer</a></li>
+                    <li><a href="https://stackoverflow.com/">Stackoverflow - Questions and Answers board! If you have a question, check here, it might have been answered already!</a></li>
+                    <li><a href="https://github.com/">Github - Version control is basically mandatory these days! Learn Git and easily collaborate on projects! As well as check out other projects!</a></li>
+                    <li><a href="http://www.reddit.com/">Reddit - There's a subreddit for everything! Find a great community and learn about your topic of choice!</a><br>
+                        Some of my favorite subreddits:
+                        <ul>
+                            <li><a href="https://www.reddit.com/r/ProgrammerHumor/">r/ProgrammerHumor - Great programming memes</a></li>
+                            <li><a href="https://www.reddit.com/r/softwaregore/">r/softwaregore - watch programs just have an issue</a></li>
+                            <li><a href="https://www.reddit.com/r/badcode/">r/badcode - learn by not following these examples</a></li>
+                            <li><a href="https://www.reddit.com/r/SoftwareEngineering/">r/SoftwareEngineering - A general subreddit for the world of software</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="https://twitter.com/">Twitter - Basically invaluable for any developer for connecting with anyone in the software industry</a></li>
+                </ul>
+                <br>
                 <p>&copy; Copyright 2020, Rachel Vancleave <a href="mailto:rvanclea@mail.ccsf.edu">rvanclea@mail.ccsf.edu</a><br>Created for CNIT 132</p>
             </footer>
             
